* Thu Dec 01 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Renamed module from 'windowmanager' to 'gnome'

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Mon Nov 21 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 4.1.4-0
- Include gconf type removed from xwindows project.

* Thu Jul 28 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.2-0
- Corrected the scope include syntax

* Tue Jun 7 2016 Ralph Wright <rwright@onyxpoint.com> - 4.1.1-0
- Added dconf support
- Added security settings using dconf

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-3
- Added compliance function support

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Changed puppet-server requirement to puppet

* Tue Sep 30 2014 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-1
- Updated for RHEL7

* Thu Mar 20 2014 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-0
- Updated for puppet3/hiera and added rspec tests

* Wed Oct 02 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.0.0-6
- Use 'versioncmp' for all version comparisons.

* Fri May 03 2013 Nick Markowski <nmarkowski@keywcorp.com>
4.0.0-5
- Added pupmod-mozilla as a dependency

* Tue Dec 11 2012 Maintenance
4.0.0-4
- Created a Cucumber test to ensure that windowmanager install correctly from
  the windowmanager module with all dependencies.

* Fri May 25 2012 Maintenance
4.0.0-3
- Added a windowmanager::gnome::sec class that is included by default and
  provides some common security settings via gconf.
- Moved mit-tests to /usr/share/simp...
- Updated pp files to better meet Puppet's recommended style guide.

* Fri Mar 02 2012 Maintenance
4.0.0-2
- Improved test stubs.

* Mon Dec 26 2011 Maintenance
4.0.0-1
- Updated the spec file to not require a separate file list.

* Wed Nov 02 2011 Maintenance
4.0.0-0