@@ -1,3 +1,6 @@
+* Tue Dec 13 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
+- Added strong typing of parameters
+
 * Thu Dec 01 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
 - Renamed module from 'windowmanager' to 'gnome'
 
